[package]
name = "waldl"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui_extras = "0.29"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", features = ["jpeg", "png"] }
sha1 = "0.10"
dirs = "5.0"
